2003-04-23  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (gethostname): $TMDAHOST takes precedence.
	(getfullname): $TMDANAME takes precedence.
	(getusername): $TMDAUSER takes precedence.
	(make_msgid): $TMDAIDHOST takes precedence.

2003-04-22  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (msg_as_string): New function.  Replacement for
	Message.as_string().
	
	* AutoResponse.py (AutoResponse.__init__): Use
	Util.msg_as_string() instead of msg.as_string().
	(AutoResponse.send): Ditto.

	* Pending.py (Message.release): Ditto.
	(Message.show): Ditto.
	(Message.summary): Ditto.

	* Deliver.py (Deliver.deliver): Ditto.
	* (Deliver.__deliver_mbox): No need to add the leading From_ line
	or escape "From" ourselves.

2003-04-19  Gre7g Luterman  <gre7g@wolfhome.com>

	* Removed virtual user processing from Util.
	* Added RunTask to Util to help process virtual users.
	* Removed tons of CGI_ variables from Defaults
	  (these are now handled directly by tmda-cgi).
	* Added a bunch of debugging statements to Auth.

2003-04-07  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (headers_as_string): Return the raw (undecoded) headers
	if we encounter a HeaderParseError exception while trying to
	decode the headers.
	
2003-03-12  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* FilterParser.py (_FilterFile.__init__): Add `-domains', a new
	argument for from-(file|cdb|dbm) and to-(file|cdb|dbm).

	(FilterParser.__extract_domains): New method.

	(FilterParser.firstmatch): Use __extract_domains if the `-domains'
	argument is specified.
	
2003-03-04  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* FilterParser.py (_FilterFile.__init__): Add `pipe', a new filter
	source.

	(_FilterFile.__init__): Ditto.

	(FilterParser.firstmatch): Ditto.

2003-02-26  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* AutoResponse.py (AutoResponse.create): Sort ADDED_HEADERS_SERVER
	before adding them to the message.
