@@ -1,5 +1,7 @@
 2003-04-23  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
+	* Defaults.py (TMDAINJECT): New variable.
+
 	* Util.py (gethostname): $TMDAHOST takes precedence.
 	(getfullname): $TMDANAME takes precedence.
 	(getusername): $TMDAUSER takes precedence.
